fix: scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number]{
+  -moz-appearance: textfield;
+}
+
 body {
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
